--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
 
         <div class="product">
-            <img src="" alt="Gadget 3">
+            <img src="https://images.pexels.com/photos/103566/pexels-photo-103566.jpeg?auto=compress&cs=tinysrgb&w=1600" alt="Gadget 3">
             <h3>Milkshake</h3>
             <p>Contains goat milk.</p>
             <div class="price">$600.99</div>
