--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
 
     <header>
-        <h1>Cool Gadgets for Sale</h1>
+        <h1>Sunday's Kitchen</h1>
         <p>Find the latest and coolest gadgets for your tech collection!</p>
     </header>
 
