--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css"> 
     
 
-    <!-- Badge Installation -->
+    <!-- PROD Badge Installation
 
     <script>
         (function () {
@@ -19,7 +19,21 @@
             var entry = document.getElementsByTagName('script')[0];
             entry.parentNode.insertBefore(script, entry);
         })();
+    </script> -->
+
+    <!-- QA Badge Installation -->
+     <script>
+        (function () {
+            var script = document.createElement('script');
+
+            script.src = 'https://kmgu6d1qxk.execute-api.us-east-2.amazonaws.com/test/api/tlv1?siteId=98e801c9-3964-4d35-bcdb-287abd31d4b5';
+            script.async = true;
+
+            var entry = document.getElementsByTagName('script')[0];
+            entry.parentNode.insertBefore(script, entry);
+        })();
     </script>
+
     
 </head>
 <body>
@@ -33,21 +47,21 @@
         <div class="product">
             <img src="https://images.pexels.com/photos/1639562/pexels-photo-1639562.jpeg?auto=compress&cs=tinysrgb&w=1600" alt="Gadget 1">
             <h3>Burger</h3>
-            <p>Made from chicken-fed beef!</p>
+            <p>Made from chicken-fed beef</p>
             <div class="price">$5000.99</div>
         </div>
 
         <div class="product">
             <img src="https://images.pexels.com/photos/1583884/pexels-photo-1583884.jpeg?auto=compress&cs=tinysrgb&w=1600" alt="Gadget 2">
             <h3>Fries</h3>
-            <p>Sourced from Ireland: the potato land</p>
+            <p>Sourced from Ireland</p>
             <div class="price">$10,000.99</div>
         </div>
 
         <div class="product">
             <img src="https://images.pexels.com/photos/103566/pexels-photo-103566.jpeg?auto=compress&cs=tinysrgb&w=1600" alt="Gadget 3">
             <h3>Milkshake</h3>
-            <p>Contains goat milk.</p>
+            <p>Contains goat milk</p>
             <div class="price">$600.99</div>
         </div>
 
