--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     PROD Badge Installation
 
-    <script>
+    <!-- <script>
         (function () {
             var script = document.createElement('script');
     
@@ -19,20 +19,21 @@
             var entry = document.getElementsByTagName('script')[0];
             entry.parentNode.insertBefore(script, entry);
         })();
-    </script>
+    </script> -->
 
-    <!-- QA Badge Installation
+    QA Badge Installation
      <script>
         (function () {
             var script = document.createElement('script');
 
-            script.src = 'https://kmgu6d1qxk.execute-api.us-east-2.amazonaws.com/test/api/tlv1?siteId=98e801c9-3964-4d35-bcdb-287abd31d4b5';
+            script.src = 'https://kmgu6d1qxk.execute-api.us-east-2.amazonaws.com/test/api/tlv1?siteId=b50c9f49-51c5-493d-9909-2f73ad81aaf5';
             script.async = true;
 
             var entry = document.getElementsByTagName('script')[0];
             entry.parentNode.insertBefore(script, entry);
         })();
-    </script> -->
+    </script>
+
 
     
 </head>
