Changed badge to PROD

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     PROD Badge Installation
 
-    <!-- <script>
+    <script>
         (function () {
             var script = document.createElement('script');
     
@@ -19,10 +19,10 @@
             var entry = document.getElementsByTagName('script')[0];
             entry.parentNode.insertBefore(script, entry);
         })();
-    </script> -->
+    </script>
 
-    QA Badge Installation
-     <script>
+    <!--QA Badge Installation --> 
+     <!-- <script>
         (function () {
             var script = document.createElement('script');
 
@@ -33,7 +33,7 @@
             entry.parentNode.insertBefore(script, entry);
         })();
     </script>
-
+ -->
 
     
 </head>
