--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css"> 
     
 
-    PROD Badge Installation
+    <!-- PROD Badge Installation
 
     <script>
         (function () {
@@ -19,10 +19,10 @@
             var entry = document.getElementsByTagName('script')[0];
             entry.parentNode.insertBefore(script, entry);
         })();
-    </script>
+    </script> -->
 
     <!--QA Badge Installation --> 
-     <!-- <script>
+    <script>
         (function () {
             var script = document.createElement('script');
 
@@ -33,7 +33,8 @@
             entry.parentNode.insertBefore(script, entry);
         })();
     </script>
- -->
+
+
 
     
 </head>
