--- a/index.html
+++ b/index.html
@@ -21,22 +21,20 @@
         })();
     </script> -->
 
-    <!--QA Badge Installation --> 
-    <script>
-        (function () {
-            var script = document.createElement('script');
+    QA Badge Installation  
+   <script>
+    (function () {
+        var script = document.createElement('script');
 
-            script.src = 'https://kmgu6d1qxk.execute-api.us-east-2.amazonaws.com/test/api/tlv1?siteId=b50c9f49-51c5-493d-9909-2f73ad81aaf5';
-            script.async = true;
+        script.src = 'https://kmgu6d1qxk.execute-api.us-east-2.amazonaws.com/test/api/tlv1?siteId=b50c9f49-51c5-493d-9909-2f73ad81aaf5';
+        script.async = true;
 
-            var entry = document.getElementsByTagName('script')[0];
-            entry.parentNode.insertBefore(script, entry);
-        })();
-    </script>
+        var entry = document.getElementsByTagName('script')[0];
+        entry.parentNode.insertBefore(script, entry);
+    })();
+</script>
 
 
-
-    
 </head>
 <body>
 
