no badge installations

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </script> -->
 
 
-    QA Badge Installation  
+    <!-- QA Badge Installation  
     <script>
         (function () {
             var script = document.createElement('script');
@@ -33,7 +33,7 @@
             var entry = document.getElementsByTagName('script')[0];
             entry.parentNode.insertBefore(script, entry);
         })();
-    </script>
+    </script> -->
 
 
 </head>
